2008-09-04  Diego Escalante Urrelo  <diegoe@gnome.org>

	* www.gnome.org/community/index.wml,
	  www.gnome.org/Makefile.am:
	  Remove softwaremap/ and its reference since gnomefiles.org is now offline
	  indefinitely.

2008-09-04  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  wrong date...

2008-09-04  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  populate the cheese 2.23.91 release

2008-09-01  Dodji Seketeli  <dodji@gnome.org>

	* www.gnome.org/projects/gtksourceviewmm/*: Updated the API doc.

2008-08-31  Dodji Seketeli  <dodji@gnome.org>

	* www.gnome.org/projects/gtksourceviewmm/Makefile.am: Fix a buglet in
	  here.

2008-08-31  Dodji Seketeli  <dodji@gnome.org>

	* configure.in: Oops, fix a breakage I introduced.

2008-08-31  Dodji Seketeli  <dodji@gnome.org>

	* www.gnome.org/projects/gtksourceviewmm: Added gtksourceviewmm
	  website.
	* www.gnome.org/projects/Makefile.am: Likewise.
	* configure.in: Likewise.
	* www.gnome.org/projects/index.wml: Updated software map.

2008-08-24  Dodji Seketeli  <dodji@gnome.org>

	* www.gnome.org/projects/nemiver: Added Nemiver website to
	projects.
	* www.gnome.org/projects/Makefile.am: Likewise.
	* configure.in: Likewise.
	* www.gnome.org/projects/index.wml: Updated software map.

2008-08-22  Thomas Thurman  <tthurman@gnome.org>

	* www.gnome.org/projects/index.wml: 
	  re-pointed Metacity's entry to point at the blog
	  rather than the download site

2008-08-22  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  small cheese page updates

2008-08-20  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: update dates for GNOME.Asia

2008-08-18  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  populate the cheese 2.23.90 release
