@@ -256,6 +256,18 @@
           <h3>Already baked development packages</h3>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.23/cheese-2.23.92.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.23.92
+              </a>
+              <p>
+              released on September 8th 2008<br />
+              md5sums: 5ff9b66e4b356b79a8a8b2a0a4dea38b
+              </p>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.23/cheese-2.23.91.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
