@@ -140,6 +140,22 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>September 8th 2008</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.23.92 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>old photos and videos (before 2.24) are now available in cheese 2.24</li>
+            <li>cheese crashes no more when no device is set in gconf</li>
+            <li>display toolbar when entering into fullscreen mode</li>
+            <li>documentation update</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download.html">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00067.html">full release notes</a>)
+
           <h3>September 1st 2008</h3>
           <p>
           <b>Unstable</b>
