@@ -1,3 +1,9 @@
+2008-09-09  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  populate the cheese 2.23.92 release
+
 2008-09-04  Diego Escalante Urrelo  <diegoe@gnome.org>
 
 	* www.gnome.org/community/index.wml,
